* added ez-index to navbar * fixed mobile responsiveness of speakers * changed favicon

--- a/src/views/Home/components/Speakers/speakers.scss
+++ b/src/views/Home/components/Speakers/speakers.scss
@@ -6,9 +6,13 @@
   padding-top: 2%;
 
   &__titleContainer {
-    max-width: 75%;
+    width: 75%;
     height: 100%;
     margin: auto auto 5%;
+
+    @include rsp.respond(phone) {
+      width: 100%;
+    }
   }
 
   &__title {
